[tool.poetry]
name = "repl_python3_GaseousPleasingPlan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
Random-Word = "^1.0.7"
Flask = "^2.0.1"
Flask-SocketIO = "^5.1.1"
pytest = "^6.2.5"
eventlet = "^0.32.0"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
