[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_GaseousPleasingPlan"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
Flask-SocketIO = "^5.1.1"
Random-Word = "^1.0.7"
eventlet = "0.30.2"
gevent-websocket = "^0.10.1"
gunicorn = "^20.1.0"
pytest = "^6.2.5"
python = "3.8.12"
wikipedia = "^1.4.0"
[tool.poetry.dev-dependencies]
